--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,9 @@
 
 body {
   font-family: var(--main-font);
-  font-style: normal;
-  font-weight: 400;
+  font-size: 14px;
   color: var(--main-text-color);
+  letter-spacing: 0.03em;
 }
 
 ul {
@@ -38,14 +38,13 @@ a {
   color: var(--black-color);
 }
 
-.logo span {
+.logo-text {
   color: var(--active-color);
 }
 
 .header-list-menu-link {
   color: inherit;
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.02em;
 }
@@ -60,7 +59,6 @@ a {
   font-family: inherit;
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.143;
   color: var(--grey-color);
 }
@@ -110,16 +108,12 @@ a {
 /* section feature */
 .feature-list-item-title {
   font-weight: 700;
-  font-size: 14px;
   line-height: 1.143;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 
 .feature-list-item-paragraph {
-  font-size: 14px;
   line-height: 1.714;
-  letter-spacing: 0.03em;
   color: var(--grey-color);
 }
 
@@ -129,7 +123,6 @@ a {
   font-size: 36px;
   line-height: 1.166;
   text-align: center;
-  letter-spacing: 0.03em;
 }
 
 /* section teams */
@@ -142,7 +135,6 @@ a {
   font-size: 36px;
   line-height: 1.166;
   text-align: center;
-  letter-spacing: 0.03em;
 }
 
 .teams-list-item h3,
@@ -150,7 +142,6 @@ a {
   font-size: 16px;
   line-height: 1.187;
   text-align: center;
-  letter-spacing: 0.03em;
 }
 
 .teams-list-item-title {
@@ -169,7 +160,6 @@ a {
   font-size: 16px;
   line-height: 1.625;
   cursor: pointer;
-  letter-spacing: 0.03em;
   border: none;
   background: #f5f4fa;
   border-radius: 4px;
@@ -192,7 +182,6 @@ a {
   font-size: 16px;
   line-height: 1.875;
   color: var(--grey-color);
-  letter-spacing: 0.03em;
 }
 
 /* footer */
@@ -207,7 +196,6 @@ footer a.logo {
 
 address {
   font-style: normal;
-  font-size: 14px;
   line-height: 1.714;
 }
 
